--- a/style.css
+++ b/style.css
@@ -147,3 +147,14 @@ footer {
   font-size: 14px;
   text-align: center;
 }
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
