style: ajusta altura do body para min 100vh

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  min-height: 100vh;
 }
 
 body * {
@@ -36,8 +37,8 @@ body * {
 #container {
   width: 100%;
   max-width: 588px;
-  margin: 56px auto 0px;
-  padding: 0 24px;
+  margin: 0 auto;
+  padding: 56px 24px 0;
 }
 
 /* profile */
