--- a/style.css
+++ b/style.css
@@ -76,6 +76,11 @@ body * {
   z-index: 1;
   transform: translateY(-50%);
   animation: slide-back 0.2s;
+  cursor: pointer;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 .light #switch button {
